<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_featured"
            android:icon="@drawable/ic_action_achievement"
            android:title="@string/featured" />

        <item
            android:id="@+id/nav_hotels"
            android:icon="@drawable/ic_hotel"
            android:title="@string/hotels" />

        <item
            android:id="@+id/nav_restaurants"
            android:icon="@drawable/ic_restaurant"
            android:title="@string/restaurants" />

        <item
            android:id="@+id/nav_nature"
            android:icon="@drawable/ic_terrain"
            android:title="@string/nature" />
    </group>

</menu>
